﻿Version 2.4.2

- Revert 2.4.1.2 hotfix
- Remove population caching
- Rearrange selection buttons in settings panel to separate service selections
- New single zh translation


Version 2.4.1.2 hotfix

- More attempts to resolve issues for some Chinese users


Version 2.4.1.1 hotfix

- Add multiple checks and exception catching to translation framework and post-loading operations to try and solve issues experienced by Chinese users


Version 2.4.1

- Implement new population caching system that handles more than one level per prefab
- Overhaul settings panel options UI code


Version 2.4

- Add configurable cost overrides
- Add option to automatically lock the building level of plopped growables (requires Advanced Building Level Control mod)
- Add mod/author/local settings selection menu to settings panel (to see settings other than the currently active one)
- Remove 'reset building stats on load' option (too easy to accidentally break things) - use the 'save and apply' option to manually update instead
- Disable population textfields when 'use reality' option is set
- Fix list selection not reflecting current building when restoring settings panel from previous state
- Strengthen translation framework to properly handle existing-but-empty translation strings
- Add aditional CitizenUnits check logging
- Update bundled CitiesHarmony to 2.0 with Harmony 2.0.4


Version 2.3.7

- Stop Harmony error message from (incorrectly) showing when loading into editors
- Minor tweaks to UI layout
- Improve update notification message layout


Version 2.3.6

- Add ClearAllWorkplaceCache method to enable other mods to trigger workplace cache clearance for all buildings at once
- Improve mod conflict detection and notification
- Implement 'Don't show again' option for Plop the Growables warning (and add rider to description making it more explicit that both mods CAN still be used together)
- Overhaul logging


Version 2.3.5
